# substack_analyzer

./: .gitignore  DESIGN.md  README.md  app.py  equation.md  pyproject.toml  raw_data.md  requirements.txt  simple_design.md  to deal with later.md
.streamlit/: config.toml
drag_main/: index.html
drag_timeline/: index.html
logos/: color_scheme.txt
scripts/: e2e_walkthrough.py
substack_analyzer/: __init__.py  advanced_model.py  analysis.py  calibration.py  changepoints.py  detection.py  model.py  persistence.py  plot_utils.py  types.py  ui.py
tests/: test_analysis.py  test_calibration.py  test_changepoints.py  test_detection.py  test_e2e_walkthrough.py  test_model.py  test_package_exports.py  test_persistence.py  test_types.py  test_ui.py  test_underfitting_diagnostics.py
