[project]
name = "substack-analyzer"
version = "0.0.5"
requires-python = ">=3.12,<3.13"
description = "Substack analyzer app"
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
